--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,13 @@
   </scm>
 
     <properties>
+    	<air.maven.version>3.2.0</air.maven.version>
+    
         <air.check.skip-extended>true</air.check.skip-extended>
         <air.check.skip-license>false</air.check.skip-license>
 
-        <air.check.fail-checkstyle>true</air.check.fail-checkstyle>
-        <air.check.skip-checkstyle>false</air.check.skip-checkstyle>
+        <air.check.fail-checkstyle>false</air.check.fail-checkstyle>
+        <air.check.skip-checkstyle>true</air.check.skip-checkstyle>
     </properties>
 
     <dependencyManagement>
